完善Json的设计

--- a/Z-Endpoint-Start/src/main/resources/application.properties
+++ b/Z-Endpoint-Start/src/main/resources/application.properties
@@ -22,6 +22,10 @@
 #
 server.port=8090
 spring.jackson.property-naming-strategy=SNAKE_CASE
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.parser.allow_single_quotes=true
+spring.jackson.deserialization.fail_on_unknown_properties=true
+spring.jackson.defaultPropertyInclusion=NON_EMPTY
 spring.main.allow-bean-definition-overriding=true
 spring.output.ansi.enabled=ALWAYS
 z.chess.raft.uid.type=3
