--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
         <module>Z-Player</module>
         <module>Z-Endpoint-Start</module>
         <module>Z-Consensus-Start</module>
-        <module>Z-Test</module>
+        <module>Z-Audience</module>
     </modules>
     <properties>
         <!--RT-->
@@ -100,25 +100,25 @@
         <slf4j.version>1.7.30</slf4j.version>
         <logback.version>1.2.3</logback.version>
         <!--SPRING-BOOT-->
-        <spring-boot.version>2.4.1</spring-boot.version>
+        <spring-boot.version>2.4.2</spring-boot.version>
         <!--Commons-IO-->
         <commons-io.version>2.8.0</commons-io.version>
         <!--DB-->
         <postgresql.driver.version>42.2.18</postgresql.driver.version>
-        <hibernate-types.version>2.10.0</hibernate-types.version>
+        <hibernate-types-52.version>2.10.2</hibernate-types-52.version>
         <!--PIPELINE-->
         <disruptor.version>3.4.2</disruptor.version>
         <!--TOOLS-->
         <httpcore.version>4.4.14</httpcore.version>
         <!--TEST TOOLS VERSION-->
-        <junit.jupiter.version>5.7.0</junit.jupiter.version>
-        <junit.platform.verssion>1.7.0</junit.platform.verssion>
-        <mockito.version>3.6.0</mockito.version>
+        <junit.jupiter.version>5.7.1</junit.jupiter.version>
+        <junit.platform.verssion>1.7.1</junit.platform.verssion>
+        <mockito.version>3.7.7</mockito.version>
         <!--CACHE-->
         <ehcache.version>3.9.0</ehcache.version>
         <!--JSON-->
-        <jackson.version>2.11.3</jackson.version>
-        <json-schema.version>1.0.45</json-schema.version>
+        <jackson.version>2.12.1</jackson.version>
+        <json-schema.version>1.0.48</json-schema.version>
     </properties>
     <dependencies>
         <!--Log-->
@@ -229,7 +229,7 @@
             <dependency>
                 <groupId>com.vladmihalcea</groupId>
                 <artifactId>hibernate-types-52</artifactId>
-                <version>${hibernate-types.version}</version>
+                <version>${hibernate-types-52.version}</version>
             </dependency>
             <!--Cache-->
             <dependency>
