--- a/Z-Pawn/src/main/resources/db.properties
+++ b/Z-Pawn/src/main/resources/db.properties
@@ -40,4 +40,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:postgresql://192.168.10.10:5432/isahl.z-chess
 spring.datasource.username=isahl.z-chess.pgsql
 spring.datasource.password=2da790253022bd05cddda6d06bdc1e60
-spring.jpa.properties.hibernate.default_schema="isahl-z-chess"
+spring.jpa.properties.hibernate.default_schema="z-chess"
