Security 做了一些开发

--- a/Z-Referee/pom.xml
+++ b/Z-Referee/pom.xml
@@ -25,18 +25,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>framework.z-chess</artifactId>
         <groupId>com.isahl.chess</groupId>
         <version>1.0.12-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
     <name>Z-Referee</name>
     <artifactId>security.z-referee</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.isahl.chess</groupId>
-            <artifactId>io.z-queen</artifactId>
+            <artifactId>storage.z-rook</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -56,5 +56,31 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <!-- Spring Boot Maven 插件 -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+                <configuration>
+                    <layout>JAR</layout>
+                    <mainClass>com.isahl.chess.referee.start.ApplicationReferee</mainClass>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.springframework.boot</groupId>
+                            <artifactId>spring-boot-configuration-processor</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
