--- a/pom.xml
+++ b/pom.xml
@@ -118,12 +118,12 @@
         <slf4j.version>1.7.30</slf4j.version>
         <logback.version>1.2.3</logback.version>
         <!--SPRING-BOOT-->
-        <spring-boot.version>2.4.3</spring-boot.version>
+        <spring-boot.version>2.4.4</spring-boot.version>
         <!--Commons-IO-->
         <commons-io.version>2.8.0</commons-io.version>
         <!--DB-->
-        <postgresql.driver.version>42.2.18</postgresql.driver.version>
-        <hibernate-types-52.version>2.10.2</hibernate-types-52.version>
+        <postgresql.driver.version>42.2.19</postgresql.driver.version>
+        <hibernate-types-52.version>2.10.3</hibernate-types-52.version>
         <!--PIPELINE-->
         <disruptor.version>3.4.2</disruptor.version>
         <!--TOOLS-->
@@ -133,10 +133,10 @@
         <junit.platform.verssion>1.7.1</junit.platform.verssion>
         <mockito.version>3.7.7</mockito.version>
         <!--CACHE-->
-        <ehcache.version>3.9.0</ehcache.version>
+        <ehcache.version>3.9.2</ehcache.version>
         <!--JSON-->
-        <jackson.version>2.12.1</jackson.version>
-        <json-schema.version>1.0.48</json-schema.version>
+        <jackson.version>2.12.2</jackson.version>
+        <json-schema.version>1.0.50</json-schema.version>
         <spring-security-jwt.version>1.1.1.RELEASE</spring-security-jwt.version>
     </properties>
     <dependencies>
@@ -263,8 +263,7 @@
             <dependency>
                 <groupId>org.springframework.security.oauth.boot</groupId>
                 <artifactId>spring-security-oauth2-autoconfigure</artifactId>
-                <!--                <version>${spring-boot.version}</version>-->
-                <version>2.4.2</version>
+                <version>${spring-boot.version}</version>
             </dependency>
             <!--  postgresql DB -->
             <dependency>
