--- a/Z-Referee/src/main/resources/security.properties
+++ b/Z-Referee/src/main/resources/security.properties
@@ -21,3 +21,5 @@
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
 z-chess.referee.security.ignore_patterns="/", "/css/**", "/js/**", "/images/**", "/layui/**","/login", "/login-error", "/401"
+# mode:[oauth,jwt,basic,none]
+z-chess.referee.security.mode=basic
