--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
+            <repositories>
+                <repository>
+                    <id>aliyun-maven-repo</id>
+                    <name>aliyun-maven</name>
+                    <url>https://maven.aliyun.com/repository/public</url>
+                </repository>
+            </repositories>
         </profile>
         <profile>
             <id>release</id>
@@ -123,9 +130,9 @@
         <commons-io.version>2.8.0</commons-io.version>
         <!--DB-->
         <postgresql.driver.version>42.2.19</postgresql.driver.version>
-        <hibernate-types-52.version>2.10.3</hibernate-types-52.version>
+        <hibernate-types-52.version>2.10.4</hibernate-types-52.version>
         <!--PIPELINE-->
-        <disruptor.version>3.4.2</disruptor.version>
+        <disruptor.version>3.4.3</disruptor.version>
         <!--TOOLS-->
         <httpcore.version>4.4.14</httpcore.version>
         <!--TEST TOOLS VERSION-->
@@ -135,8 +142,8 @@
         <!--CACHE-->
         <ehcache.version>3.9.2</ehcache.version>
         <!--JSON-->
-        <jackson.version>2.12.2</jackson.version>
-        <json-schema.version>1.0.50</json-schema.version>
+        <jackson.version>2.12.3</jackson.version>
+        <json-schema.version>1.0.52</json-schema.version>
         <spring-security-jwt.version>1.1.1.RELEASE</spring-security-jwt.version>
     </properties>
     <dependencies>
@@ -420,6 +427,7 @@
                 <version>2.5.2</version>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
                 <executions>
