--- a/Z-Referee/src/main/resources/security.properties
+++ b/Z-Referee/src/main/resources/security.properties
@@ -22,4 +22,4 @@
 #
 z-chess.referee.security.ignore_patterns="/", "/css/**", "/js/**", "/images/**", "/layui/**","/login", "/login-error", "/401"
 # mode:[oauth,jwt,basic,none]
-z-chess.referee.security.mode=basic
+z-chess.referee.security.mode=none
