--- a/Z-Arena/src/main/resources/application.properties
+++ b/Z-Arena/src/main/resources/application.properties
@@ -20,7 +20,8 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-server.port=8090
+server.port=8080
+server.ssl.enabled=false
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.parser.allow_single_quotes=true
