--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <groupId>com.isahl.chess</groupId>
     <artifactId>framework.z-chess</artifactId>
     <name>Z-Chess</name>
-    <version>1.0.12-SNAPSHOT</version>
+    <version>1.0.13-SNAPSHOT</version>
     <packaging>pom</packaging>
     <url>https://github.com/William-d-zk/Z-Chess</url>
     <developers>
@@ -63,7 +63,7 @@
                 <repository>
                     <id>aliyun-maven-repo</id>
                     <name>aliyun-maven</name>
-                    <url>https://maven.aliyun.com/repository/public</url>
+                    <url>https://maven.aliyun.com/repository/central</url>
                 </repository>
             </repositories>
         </profile>
@@ -72,6 +72,13 @@
             <properties>
                 <profiles.active>release</profiles.active>
             </properties>
+            <repositories>
+                <repository>
+                    <id>aliyun-maven-repo</id>
+                    <name>aliyun-maven</name>
+                    <url>https://maven.aliyun.com/repository/central</url>
+                </repository>
+            </repositories>
             <distributionManagement>
                 <snapshotRepository>
                     <id>oss</id>
@@ -94,6 +101,40 @@
                                 <phase>verify</phase>
                                 <goals>
                                     <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.8</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>oss</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.2.0</version>
+                        <configuration>
+                            <show>private</show>
+                            <nohelp>true</nohelp>
+                            <charset>UTF-8</charset>
+                            <encoding>UTF-8</encoding>
+                            <docencoding>UTF-8</docencoding>
+                            <doclint>none</doclint>
+                            <detectOfflineLinks>false</detectOfflineLinks>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar</goal>
                                 </goals>
                             </execution>
                         </executions>
@@ -129,21 +170,22 @@
         <!--Commons-IO-->
         <commons-io.version>2.8.0</commons-io.version>
         <!--DB-->
-        <postgresql.driver.version>42.2.19</postgresql.driver.version>
+        <postgresql.driver.version>42.2.20</postgresql.driver.version>
         <hibernate-types-52.version>2.10.4</hibernate-types-52.version>
         <!--PIPELINE-->
-        <disruptor.version>3.4.3</disruptor.version>
+        <disruptor.version>3.4.4</disruptor.version>
         <!--TOOLS-->
-        <httpcore.version>4.4.14</httpcore.version>
+        <httpcore-nio.version>4.4.14</httpcore-nio.version>
         <!--TEST TOOLS VERSION-->
         <junit.jupiter.version>5.7.1</junit.jupiter.version>
         <junit.platform.verssion>1.7.1</junit.platform.verssion>
         <mockito.version>3.7.7</mockito.version>
         <!--CACHE-->
-        <ehcache.version>3.9.2</ehcache.version>
+        <ehcache.version>3.9.3</ehcache.version>
+        <jcache.version>1.1.1</jcache.version>
         <!--JSON-->
         <jackson.version>2.12.3</jackson.version>
-        <json-schema.version>1.0.52</json-schema.version>
+        <json-schema-validator.version>1.0.52</json-schema-validator.version>
         <!--SECURITY-->
         <jjwt.version>0.11.2</jjwt.version>
         <spring-security-jwt.version>1.1.1.RELEASE</spring-security-jwt.version>
@@ -313,6 +355,11 @@
                 <artifactId>ehcache</artifactId>
                 <version>${ehcache.version}</version>
             </dependency>
+            <dependency>
+                <groupId>javax.cache</groupId>
+                <artifactId>cache-api</artifactId>
+                <version>${jcache.version}</version>
+            </dependency>
             <!-- Test -->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
@@ -348,7 +395,7 @@
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpcore-nio</artifactId>
-                <version>${httpcore.version}</version>
+                <version>${httpcore-nio.version}</version>
             </dependency>
             <!--disruptor-->
             <dependency>
@@ -400,7 +447,7 @@
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>json-schema-validator</artifactId>
-                <version>${json-schema.version}</version>
+                <version>${json-schema-validator.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -420,30 +467,13 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
+                <artifactId>maven-resources-plugin</artifactId>
                 <version>3.2.0</version>
-                <configuration>
-                    <show>private</show>
-                    <nohelp>true</nohelp>
-                    <charset>UTF-8</charset>
-                    <encoding>UTF-8</encoding>
-                    <docencoding>UTF-8</docencoding>
-                    <doclint>none</doclint>
-                    <detectOfflineLinks>false</detectOfflineLinks>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
+            <!--
+
             -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -464,17 +494,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.8</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <serverId>oss</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                </configuration>
-            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
