mqtt message & shadow device

--- a/Z-Arena/src/main/resources/application.properties
+++ b/Z-Arena/src/main/resources/application.properties
@@ -38,6 +38,7 @@ z.chess.raft.peers[2]=192.168.10.14:5228
 # test gate local address
 #z.chess.raft.gate_test=192.168.10.10:22
 z.chess.raft.cluster_mode=false
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/isahl.z-chess
 #z.chess.provider.io.consumer.key_store_path=cert/server.jks
 z.chess.provider.io.consumer.trust_key_store_path=
