--- a/Z-Arena/src/main/resources/application.properties
+++ b/Z-Arena/src/main/resources/application.properties
@@ -28,6 +28,7 @@ spring.jackson.parser.allow_single_quotes=true
 spring.jackson.deserialization.fail_on_unknown_properties=true
 spring.jackson.defaultPropertyInclusion=NON_EMPTY
 spring.main.allow-bean-definition-overriding=true
+spring.aop.proxy-target-class=false
 spring.output.ansi.enabled=ALWAYS
 z.chess.raft.uid.type=3
 z.chess.raft.peers[0]=192.168.10.12:5228
