plugin repo → aliyun

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,16 @@
                     <url>https://maven.aliyun.com/repository/central</url>
                 </repository>
             </repositories>
+            <pluginRepositories>
+                <pluginRepository>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                    <id>aliyun-maven-repo-plugin</id>
+                    <name>aliyun-maven-plugin</name>
+                    <url>https://maven.aliyun.com/repository/central</url>
+                </pluginRepository>
+            </pluginRepositories>
         </profile>
         <profile>
             <id>dev</id>
@@ -82,6 +92,16 @@
                     <url>https://maven.aliyun.com/repository/central</url>
                 </repository>
             </repositories>
+            <pluginRepositories>
+                <pluginRepository>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                    <id>aliyun-maven-repo-plugin</id>
+                    <name>aliyun-maven-plugin</name>
+                    <url>https://maven.aliyun.com/repository/central</url>
+                </pluginRepository>
+            </pluginRepositories>
         </profile>
         <profile>
             <id>release</id>
