--- a/Z-Arena/src/main/resources/application.properties
+++ b/Z-Arena/src/main/resources/application.properties
@@ -30,15 +30,7 @@ spring.jackson.defaultPropertyInclusion=NON_EMPTY
 spring.main.allow-bean-definition-overriding=true
 spring.aop.proxy-target-class=false
 spring.output.ansi.enabled=ALWAYS
-z.chess.raft.uid.type=3
-z.chess.raft.peers[0]=192.168.10.12:5228
-z.chess.raft.peers[1]=192.168.10.13:5228
-z.chess.raft.peers[2]=192.168.10.14:5228
-# test peer local address
-#z.chess.raft.peer_test=192.168.10.10:22
-# test gate local address
-#z.chess.raft.gate_test=192.168.10.10:22
-z.chess.raft.cluster_mode=false
+z.chess.raft.cluster_mode=true
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/isahl.z-chess
 #z.chess.provider.io.consumer.key_store_path=cert/server.jks
