--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -41,8 +41,7 @@ z.chess.raft.peer_bind=raft10.isahl.com:5228
 z.chess.raft.peers[0]=raft10.isahl.com:5228
 z.chess.raft.peers[1]=raft11.isahl.com:5228
 z.chess.raft.peers[2]=raft12.isahl.com:5228
-z.chess.raft.peers[3]=raft13.isahl.com:5228
 #gate
 z.chess.raft.gate_bind=raft-gate0.isahl.com:5300
 #z.chess.raft.gates[] ;key for routers between different group
-#z.chess.raft.gates[0]=172.10.10.23:5300
+#z.chess.raft.gates[0]=raft-gate0.isahl.com:5300
