--- a/Z-Arena/src/main/resources/application-daily.properties
+++ b/Z-Arena/src/main/resources/application-daily.properties
@@ -22,12 +22,6 @@
 #
 #
 server.port=8080
-z.chess.raft.peers[0]=192.168.10.110:5228
-z.chess.raft.peers[1]=192.168.10.111:5228
-z.chess.raft.peers[2]=192.168.10.112:5228
-# test peer local address
-z.chess.raft.peer_test=192.168.10.253:22
-# test gate local address
-z.chess.raft.gate_test=192.168.10.253:22
 z.chess.raft.cluster_mode=true
-spring.datasource.url=jdbc:postgresql://192.168.10.10:5432/isahl.z-chess
+z.chess.raft.peer_bind=raft10.isahl.com:5228
+spring.datasource.url=jdbc:postgresql://r720.isahl.com:5432/isahl.z-chess
