cluster setting update

--- a/Z-Arena/src/main/resources/application-daily.properties
+++ b/Z-Arena/src/main/resources/application-daily.properties
@@ -23,5 +23,4 @@
 #
 server.port=8080
 z.chess.raft.cluster_mode=true
-z.chess.raft.peer_bind=raft10.isahl.com:5228
-spring.datasource.url=jdbc:postgresql://r720.isahl.com:5432/isahl.z-chess
+spring.datasource.url=jdbc:postgresql://r720:5432/isahl.z-chess
