--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -37,11 +37,11 @@ z.chess.raft.snapshot_in_second=60S
 z.chess.raft.snapshot_min_size=50MB
 z.chess.raft.snapshot_fragment_max_size=80KB
 #peer
-z.chess.raft.peer_bind=raft10.isahl.com:5228
-z.chess.raft.peers[0]=raft10.isahl.com:5228
-z.chess.raft.peers[1]=raft11.isahl.com:5228
-z.chess.raft.peers[2]=raft12.isahl.com:5228
+z.chess.raft.peer_port=5228
+z.chess.raft.peers[0]=raft10
+z.chess.raft.peers[1]=raft11
+z.chess.raft.peers[2]=raft12
 #gate
-z.chess.raft.gate_bind=raft-gate0.isahl.com:5300
+z.chess.raft.gate_port=5300
 #z.chess.raft.gates[] ;key for routers between different group
-#z.chess.raft.gates[0]=raft-gate0.isahl.com:5300
+#z.chess.raft.gates[0]=gate0
