--- a/Z-Arena/src/main/resources/application-daily.properties
+++ b/Z-Arena/src/main/resources/application-daily.properties
@@ -21,7 +21,6 @@
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
 #
-server.port=8080
+#server.port=8080
 z.chess.raft.cluster_mode=true
 z.chess.raft.uid.type=2
-spring.datasource.url=jdbc:postgresql://r720:5432/isahl.z-chess
