--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -22,7 +22,7 @@
 #
 z.chess.raft.max_segment_size=65536
 z.chess.raft.base_dir=${user.home}/Z-Chess
-z.chess.raft.cluster_mode=true
+z.chess.raft.cluster_mode=false
 z.chess.raft.uid.idc_id=1
 z.chess.raft.uid.raft_id=1
 # uid.type provider:2 cluster:3 internal:1 consumer:0
