--- a/Z-Referee/src/main/resources/security.properties
+++ b/Z-Referee/src/main/resources/security.properties
@@ -20,6 +20,6 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-z-chess.referee.security.ignore_patterns="/", "/css/**", "/js/**", "/images/**", "/lay-ui/**","/login", "/login-error", "/401"
+z-chess.referee.security.ignore_patterns="/", "/css/**", "/js/**", "/images/**", "/login", "/login-error", "/401"
 # mode:[oauth,jwt,basic,none]
 z-chess.referee.security.mode=none
