--- a/Z-Referee/src/main/resources/security.code.properties
+++ b/Z-Referee/src/main/resources/security.code.properties
@@ -20,5 +20,5 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-z-chess.referee.author_no_permission=your role hasn't permission to access the resources,please contact the administrator
+z-chess.referee.security.code.author_no_permission=your role hasn't permission to access the resources,please contact the administrator
 
