--- a/Z-Rook/pom.xml
+++ b/Z-Rook/pom.xml
@@ -29,7 +29,7 @@
     <parent>
         <artifactId>framework.z-chess</artifactId>
         <groupId>com.isahl.chess</groupId>
-        <version>1.0.13-SNAPSHOT</version>
+        <version>1.0.13</version>
     </parent>
     <artifactId>storage.z-rook</artifactId>
     <name>Z-Rook</name>
