--- a/Z-Player/pom.xml
+++ b/Z-Player/pom.xml
@@ -29,7 +29,7 @@
     <parent>
         <artifactId>framework.z-chess</artifactId>
         <groupId>com.isahl.chess</groupId>
-        <version>1.0.13</version>
+        <version>1.0.14-SNAPSHOT</version>
     </parent>
     <artifactId>biz.z-player</artifactId>
     <name>Z-Player</name>
