--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -36,12 +36,10 @@ z.chess.raft.heartbeat_in_second=9S
 z.chess.raft.snapshot_in_second=60S
 z.chess.raft.snapshot_min_size=50MB
 z.chess.raft.snapshot_fragment_max_size=80KB
-#peer
-z.chess.raft.peer_port=5228
+#peer multi boot on same host is not support
 z.chess.raft.peers[0]=raft10:5228
 z.chess.raft.peers[1]=raft11:5228
 z.chess.raft.peers[2]=raft12:5228
 #gate
-z.chess.raft.gate_port=5300
 #z.chess.raft.gates[] ;key for routers between different group
 #z.chess.raft.gates[0]=gate0:5300
