--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -22,7 +22,6 @@
 #
 z.chess.raft.max_segment_size=65536
 z.chess.raft.base_dir=${user.home}/Z-Chess
-z.chess.raft.cluster_mode=false
 z.chess.raft.uid.idc_id=1
 z.chess.raft.uid.raft_id=1
 # uid.type provider:2 cluster:3 internal:1 consumer:0
@@ -40,6 +39,10 @@ z.chess.raft.snapshot_fragment_max_size=80KB
 z.chess.raft.peers[0]=raft10:5228
 z.chess.raft.peers[1]=raft11:5228
 z.chess.raft.peers[2]=raft12:5228
+#learner
+z.chess.raft.learners[0]=raft13:5229
+z.chess.raft.learners[1]=raft14:5229
+z.chess.raft.learners[2]=raft15:5229
 #gate
 #z.chess.raft.gates[] ;key for routers between different group
-#z.chess.raft.gates[0]=gate0:5300
+z.chess.raft.gates[0]=gate0:5300
