大幅修改集群配置细节

--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -27,9 +27,9 @@ z.chess.raft.uid.raft_id=1
 # uid.type provider:2 cluster:3 internal:1 consumer:0
 z.chess.raft.uid.type=3
 z.chess.raft.elect_in_second=3S
-#client_submit_in_Second=2*elect_in_second
+# ClientSubmitInSecond=2*ElectInSecond
 z.chess.raft.client_submit_in_second=6S
-#heartbeat_in_second = 3 * elect_in_second
+# HeartbeatInSecond = 3 * ElectInSecond
 z.chess.raft.heartbeat_in_second=9S
 #snapshot
 z.chess.raft.snapshot_in_second=60S
@@ -39,10 +39,7 @@ z.chess.raft.snapshot_fragment_max_size=80KB
 z.chess.raft.peers[0]=raft10:5228
 z.chess.raft.peers[1]=raft11:5228
 z.chess.raft.peers[2]=raft12:5228
-#learner
-z.chess.raft.learners[0]=raft13:5229
-z.chess.raft.learners[1]=raft14:5229
-z.chess.raft.learners[2]=raft15:5229
 #gate
 #z.chess.raft.gates[] ;key for routers between different group
 z.chess.raft.gates[0]=gate0:5300
+z.chess.raft.gates[1]=gate1:5300
