--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -20,26 +20,34 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-z.chess.raft.max_segment_size=65536
 z.chess.raft.base_dir=${user.home}/Z-Chess
-z.chess.raft.uid.idc_id=1
-z.chess.raft.uid.raft_id=1
+z.chess.raft.config.max_segment_size=65536
+z.chess.raft.config.uid.idc_id=1
+z.chess.raft.config.uid.cluster_id=1
 # uid.type provider:2 cluster:3 internal:1 consumer:0
-z.chess.raft.uid.type=3
-z.chess.raft.elect_in_second=3S
-# ClientSubmitInSecond=2*ElectInSecond
-z.chess.raft.client_submit_in_second=6S
+z.chess.raft.config.uid.type=3
+z.chess.raft.config.elect_in_second=3S
+# ClientSubmitInSecond = 2* ElectInSecond
+z.chess.raft.config.client_submit_in_second=6S
 # HeartbeatInSecond = 3 * ElectInSecond
-z.chess.raft.heartbeat_in_second=9S
+z.chess.raft.config.heartbeat_in_second=9S
 #snapshot
-z.chess.raft.snapshot_in_second=60S
-z.chess.raft.snapshot_min_size=50MB
-z.chess.raft.snapshot_fragment_max_size=80KB
+z.chess.raft.config.snapshot_in_second=60S
+z.chess.raft.config.snapshot_min_size=50MB
+z.chess.raft.config.snapshot_fragment_max_size=80KB
 #peer multi boot on same host is not support
-z.chess.raft.peers[0]=raft10:5228
-z.chess.raft.peers[1]=raft11:5228
-z.chess.raft.peers[2]=raft12:5228
-#gate
-#z.chess.raft.gates[] ;key for routers between different group
-z.chess.raft.gates[0]=gate0:5300
-z.chess.raft.gates[1]=gate1:5300
+z.chess.raft.config.peers[0]=raft10:5228
+z.chess.raft.config.peers[1]=raft11:5228
+z.chess.raft.config.peers[2]=raft12:5228
+#gate for routers between different group
+z.chess.raft.config.gates[0]=gate0:5300
+z.chess.raft.config.gates[1]=gate1:5300
+#node 集群全员
+z.chess.raft.config.nodes[0]=raft10
+z.chess.raft.config.nodes[1]=raft11
+z.chess.raft.config.nodes[2]=raft12
+z.chess.raft.config.nodes[3]=raft13
+z.chess.raft.config.nodes[4]=raft14
+z.chess.raft.config.nodes[5]=raft15
+z.chess.raft.config.nodes[6]=raft16
+z.chess.raft.config.nodes[7]=raft17
