gate 配置方式调整

--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -40,8 +40,8 @@ z.chess.raft.config.peers[0]=raft10:5228
 z.chess.raft.config.peers[1]=raft11:5228
 z.chess.raft.config.peers[2]=raft12:5228
 #gate for routers between different group
-z.chess.raft.config.gates[0]=gate0:5300
-z.chess.raft.config.gates[1]=gate1:5300
+z.chess.raft.config.gates[0]=raft12/gate0:5300
+z.chess.raft.config.gates[1]=raft37/gate1:5300
 #node 集群全员
 z.chess.raft.config.nodes[0]=raft10
 z.chess.raft.config.nodes[1]=raft11
