完善集群配置

--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -51,3 +51,5 @@ z.chess.raft.config.nodes[4]=raft14
 z.chess.raft.config.nodes[5]=raft15
 z.chess.raft.config.nodes[6]=raft16
 z.chess.raft.config.nodes[7]=raft17
+#learner
+z.chess.raft.config.be_learner=true
