Docker 配置结构终于弄明白了。

--- a/Z-Arena/src/main/resources/application.properties
+++ b/Z-Arena/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.jackson.defaultPropertyInclusion=NON_EMPTY
 spring.main.allow-bean-definition-overriding=true
 spring.aop.proxy-target-class=false
 spring.output.ansi.enabled=ALWAYS
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 #z.chess.provider.io.consumer.key_store_path=cert/server.jks
 z.chess.provider.io.consumer.trust_key_store_path=
 #z.chess.provider.io.consumer.key_password=storepass
