--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -22,8 +22,8 @@
 #
 z.chess.raft.base_dir=${user.home}/Z-Chess
 z.chess.raft.config.max_segment_size=65536
-z.chess.raft.config.uid.idc_id=1
-z.chess.raft.config.uid.cluster_id=1
+z.chess.raft.config.uid.idc_id=0
+z.chess.raft.config.uid.cluster_id=0
 # uid.type provider:2 cluster:3 internal:1 consumer:0
 z.chess.raft.config.uid.type=3
 z.chess.raft.config.elect_in_second=3S
@@ -36,20 +36,21 @@ z.chess.raft.config.snapshot_in_second=60S
 z.chess.raft.config.snapshot_min_size=50MB
 z.chess.raft.config.snapshot_fragment_max_size=80KB
 #peer multi boot on same host is not support
-z.chess.raft.config.peers[0]=raft10:5228
-z.chess.raft.config.peers[1]=raft11:5228
-z.chess.raft.config.peers[2]=raft12:5228
+z.chess.raft.config.peers[0]=raft00:5228
+z.chess.raft.config.peers[1]=raft01:5228
+z.chess.raft.config.peers[2]=raft02:5228
 #gate for routers between different group
-z.chess.raft.config.gates[0]=raft12/gate0:5300
-z.chess.raft.config.gates[1]=raft37/gate1:5300
+z.chess.raft.config.gates[C000]=raft00/gate00:5300
+z.chess.raft.config.gates[C080]=raft10/gate10:5300
+z.chess.raft.config.gates[C480]=raft20/gate20:5300
 #node 集群全员
-z.chess.raft.config.nodes[0]=raft10
-z.chess.raft.config.nodes[1]=raft11
-z.chess.raft.config.nodes[2]=raft12
-z.chess.raft.config.nodes[3]=raft13
-z.chess.raft.config.nodes[4]=raft14
-z.chess.raft.config.nodes[5]=raft15
-z.chess.raft.config.nodes[6]=raft16
-z.chess.raft.config.nodes[7]=raft17
+z.chess.raft.config.nodes[0]=raft00
+z.chess.raft.config.nodes[1]=raft01
+z.chess.raft.config.nodes[2]=raft02
+z.chess.raft.config.nodes[3]=raft03
+z.chess.raft.config.nodes[4]=raft04
+z.chess.raft.config.nodes[5]=raft05
+z.chess.raft.config.nodes[6]=raft06
+z.chess.raft.config.nodes[7]=raft07
 #learner
 z.chess.raft.config.be_learner=true
