--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -39,10 +39,10 @@ z.chess.raft.config.snapshot_fragment_max_size=80KB
 z.chess.raft.config.peers[0]=raft00:5228
 z.chess.raft.config.peers[1]=raft01:5228
 z.chess.raft.config.peers[2]=raft02:5228
-#gate for routers between different group
-z.chess.raft.config.gates[C000]=raft00/gate00:5300
-z.chess.raft.config.gates[C080]=raft10/gate10:5300
-z.chess.raft.config.gates[C480]=raft20/gate20:5300
+#gate for routers between different group C000# C080# C480#
+z.chess.raft.config.gates[-4611686018427387904]=raft00/gate00:5300
+z.chess.raft.config.gates[-4575657221408423936]=raft10/gate10:5300
+z.chess.raft.config.gates[-4287426845256712192]=raft20/gate20:5300
 #node 集群全员
 z.chess.raft.config.nodes[0]=raft00
 z.chess.raft.config.nodes[1]=raft01
