mqtt 消息记录与状态组件 不再公共使用remote-postgresql 作为数据库，改有本地的SQLite提供服务，LogicHandler链路有待改造

--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -20,24 +20,61 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-# Initialize database schema -> execute schema.sql (always, embedded, never)
-spring.datasource.initialization-mode=always
+# Default Spring Jpa AutoConfiguration
 spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
+spring.jpa.generate-sql=true
 spring.jpa.open-in-view=true
-# Hibernate ddl auto (create, create-drop, validate, update)
-# create-drop/create will lead to errors if Hibernate tries to create the same tables
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=POSTGRESQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.format_sql=true
-#
+spring.jpa.properties.hibernate.default_schema="z-chess.rook"
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgresql
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl.z-chess
 spring.datasource.username=isahl.z-chess.pgsql
 spring.datasource.password=2da790253022bd05cddda6d06bdc1e60
-spring.jpa.properties.hibernate.default_schema="z-chess"
+#spring.sql.init.schema-locations=schema-postgresql.sql
+#spring.sql.init.data-locations=data-postgresql.sql
+spring.sql.init.mode=always
+# Primary Remote PostgreSQL Database
+z.rook.primary.jpa.database=POSTGRESQL
+z.rook.primary.jpa.show-sql=false
+z.rook.primary.jpa.generate-ddl=true
+z.rook.primary.jpa.open-in-view=true
+z.rook.primary.jpa.hibernate.ddl-auto=update
+z.rook.primary.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+z.rook.primary.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+z.rook.primary.jpa.properties.hibernate.hbm2ddl.auto=update
+z.rook.primary.jpa.properties.hibernate.format_sql=true
+z.rook.primary.jpa.properties.hibernate.default_schema="z-chess"
+z.rook.primary.datasource.initialization-mode=always
+z.rook.primary.datasource.platform=postgresql
+z.rook.primary.datasource.driver-class-name=org.postgresql.Driver
+z.rook.primary.datasource.jdbc-url=jdbc:postgresql://db-pg.isahl.com:5432/isahl.z-chess
+z.rook.primary.datasource.username=isahl.z-chess.pgsql
+z.rook.primary.datasource.password=2da790253022bd05cddda6d06bdc1e60
+z.rook.primary.sql.init.mode=always
+z.rook.primary.sql.init.schema-locations=classpath:primary/schema.sql
+#z.rook.primary.sql.init.data-locations=classpath:primary/data.sql
+# Local Sqlite Database
+z.rook.secondary.datasource.platform=sqlite
+z.rook.secondary.datasource.initialization-mode=always
+z.rook.secondary.datasource.driver-class-name=org.sqlite.JDBC
+z.rook.secondary.datasource.jdbc-url=jdbc:sqlite:z-chess.db
+z.rook.secondary.datasource.username=
+z.rook.secondary.datasource.password=
+z.rook.secondary.jpa.database=DEFAULT
+z.rook.secondary.jpa.show-sql=false
+z.rook.secondary.jpa.generate-ddl=true
+z.rook.secondary.jpa.open-in-view=true
+z.rook.secondary.jpa.hibernate.ddl-auto=update
+z.rook.secondary.jpa.properties.hibernate.dialect=org.sqlite.hibernate.dialect.SQLiteDialect
+z.rook.secondary.jpa.properties.hibernate.hbm2ddl.auto=update
+z.rook.secondary.jpa.properties.hibernate.format_sql=true
+z.rook.secondary.sql.init.mode=always
+#z.rook.secondary.sql.init.schema-locations=classpath:secondary/schema.sql
+#z.rook.secondary.sql.init.data-locations=classpath:secondary/data.sql
