mqtt 消息记录与状态组件 不再公共使用remote-postgresql 作为数据库，改有本地的SQLite提供服务，LogicHandler链路改造完成，采用SPI模式进行MQTT和WebSocket；Z-Chat的协议处理分割

--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -42,7 +42,7 @@ spring.datasource.password=2da790253022bd05cddda6d06bdc1e60
 spring.sql.init.mode=always
 # Primary Remote PostgreSQL Database
 z.rook.primary.jpa.database=POSTGRESQL
-z.rook.primary.jpa.show-sql=false
+z.rook.primary.jpa.show-sql=true
 z.rook.primary.jpa.generate-ddl=true
 z.rook.primary.jpa.open-in-view=true
 z.rook.primary.jpa.hibernate.ddl-auto=update
