--- a/Z-Arena/src/main/resources/application-local.properties
+++ b/Z-Arena/src/main/resources/application-local.properties
@@ -21,4 +21,5 @@
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
 z.chess.raft.uid.type=2
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/isahl.z-chess
+z.rook.primary.datasource.jdbc-url=jdbc:postgresql://host.docker.internal:5432/isahl.z-chess
+#spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/isahl.z-chess
