--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -64,7 +64,7 @@ z.rook.primary.sql.init.schema-locations=classpath:primary/schema.sql
 z.rook.secondary.datasource.platform=sqlite
 z.rook.secondary.datasource.initialization-mode=always
 z.rook.secondary.datasource.driver-class-name=org.sqlite.JDBC
-z.rook.secondary.datasource.jdbc-url=jdbc:sqlite:z-chess.db
+z.rook.secondary.datasource.jdbc-url=jdbc:sqlite::resource:secondary/z-chess.db
 z.rook.secondary.datasource.username=
 z.rook.secondary.datasource.password=
 z.rook.secondary.jpa.database=DEFAULT
